--- a/reactversion/source3/src/components/css/ShapeSearcher2.css
+++ b/reactversion/source3/src/components/css/ShapeSearcher2.css
@@ -2,15 +2,25 @@
     background: white;
     width:250px;
     position: fixed;
-    top:50%;
+    top:40px;
     left:50%;
-    transform:translate(-50%,-50%);
+    transform:translateX(-50%);
     box-sizing: border-box;
     padding:6px;
     padding-top:0px;
     border-radius:12px;
     z-index:10000;
     box-shadow: 0 0 20px black;
+    animation: searchBigBody 0.5s ease-in-out;
+} 
+
+@keyframes searchBigBody {
+    0%{
+        opacity:0;
+    }
+    100%{
+        opacity:1;
+    }
 }
 
 .shape-searcher2-body,
