--- a/reactversion/source3/src/components/css/ShapeSearcher2.css
+++ b/reactversion/source3/src/components/css/ShapeSearcher2.css
@@ -117,7 +117,6 @@
     box-sizing: border-box;
     padding-top:12px;
     padding-bottom:12px;
-    margin-top:12px;
     grid-template-columns: repeat(4,1fr);
     align-items:center;
     justify-items:center;
@@ -162,4 +161,21 @@
 span.span-result-fr,
 span.span-result-phono{
     color: white;
+}
+
+.resCount{
+   width:100%;
+   font-size:0.7em;
+   text-align:center;
+   font-family: var(--logo);
+   height:30px;
+   margin-top:-8px;
+   color: rgb(var(--c0));
+}
+
+span.fatSpan{
+    font-weight:bold;
+    color: tomato;
+    font-size:2em;
+    animation: resultCounter 1.618s infinite;
 }
