added styling to links to glyphList page

--- a/reactversion/source3/src/components/css/Landing.css
+++ b/reactversion/source3/src/components/css/Landing.css
@@ -217,6 +217,15 @@ span.blueSpan{
     filter: drop-shadow(0 3px 1px black);
 }
 
+span.inLink{
+    font-weight:bold;
+    transition: color 0.25s ease-in-out;
+}
+
+span.inLink:hover{
+    color: tomato;
+}
+
 @media (max-width:700px){
     .landing-body,
     .graphieros-works,
