added 2 fonts to root vars

--- a/reactversion/source3/src/App.css
+++ b/reactversion/source3/src/App.css
@@ -12,6 +12,8 @@
   --megrim: 'Megrim', cursive;
   --logo: 'Righteous', cursive;
   --elite: 'Special Elite', cursive;
+  --hand0: 'Monsieur La Doulaise', cursive;
+  --hand1:  'Mr Dafoe', cursive;
 }
 
 body{
